# final

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/shepherd_course_picker/: __main__.py
src/shepherd_course_picker/data_maker/: __init__.py  fetch.py  scrape.py
src/shepherd_course_picker/webapp/: app.py
src/shepherd_course_picker/webapp/static/: nodes.css  picker.js  programselect.js
src/shepherd_course_picker/webapp/templates/: picker.html  programselect.html
